Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-29117

DCP Consumer in ep-engine don't correctly handle step() being called before streams was added

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 6.5.0
    • 5.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      As part of cleaning up DCP handling in the core I've added validation of the packet ordering for DCP, and as part of that I'm also using the connection type to determine if the connection is DCP or not.

      This caused the rebalance tests to fail, as ep_engine doesn't expect step() to be called before a stream was set up by calling add_stream() (which the core used to protect against, but that was because of a "bug" in the state machinery which prevented the response to be sent back for the DCP open if we toggled the DCP state too early. That is however resolved in the core).

       

      Attachments

        For Gerrit Dashboard: MB-29117
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty